@@ -456,6 +456,7 @@ HAVE_AVCODEC=false
 HAVE_AVFORMAT=false
 HAVE_AVUTIL=false
 HAVE_SWSCALE=false
+HAVE_SWRESAMPLE=false
 
 AC_ARG_ENABLE( ffmpeg, [  --disable-ffmpeg            Disable ffmpeg (avcodec) support.] , disable_ffmpeg=yes)
 if test "x$disable_ffmpeg" != "xyes" ; then
@@ -470,6 +471,8 @@ PKG_CHECK_MODULES(LIBAVUTIL,libavutil,HAVE_AVUTIL=true,HAVE_AVUTIL=false)
 
 PKG_CHECK_MODULES(LIBSWSCALE,libswscale,HAVE_SWSCALE=true,HAVE_SWSCALE=false)
 
+PKG_CHECK_MODULES(LIBSWRESAMPLE,libswresample,HAVE_SWRESAMPLE=true,HAVE_SWRESAMPLE=false)
+
 fi
 
 AC_SUBST(LIBAVCODEC_CFLAGS)
@@ -480,11 +483,14 @@ AC_SUBST(LIBAVUTIL_CFLAGS)
 AC_SUBST(LIBAVUTIL_LIBS)
 AC_SUBST(LIBSWSCALE_CFLAGS)
 AC_SUBST(LIBSWSCALE_LIBS)
+AC_SUBST(LIBSWRESAMPLE_CFLAGS)
+AC_SUBST(LIBSWRESAMPLE_LIBS)
 
 AM_CONDITIONAL(HAVE_AVCODEC,$HAVE_AVCODEC)
 AM_CONDITIONAL(HAVE_AVFORMAT,$HAVE_AVFORMAT)
 AM_CONDITIONAL(HAVE_AVUTIL,$HAVE_AVUTIL)
 AM_CONDITIONAL(HAVE_SWSCALE,$HAVE_SWSCALE)
+AM_CONDITIONAL(HAVE_SWRESAMPLE,$HAVE_SWRESAMPLE)
 
 
 HAVE_AVCODEC_OPEN2=false
