@@ -178,12 +178,16 @@ if HAVE_AVPRIV_SET_PTS_INFO
 libav_cflags += -DHAVE_AVPRIV_SET_PTS_INFO=1
 endif
 
+if HAVE_SWRESAMPLE
+if HAVE_SWSCALE
 libav_stream_libs = libav_stream.la
-AVSTREAM_LIBS = @LIBAVCODEC_LIBS@ @LIBAVFORMAT_LIBS@ @LIBAVUTIL_LIBS@
-AVSTREAM_CFLAGS = @LIBAVFORMAT_CFLAGS@ @LIBAVCODEC_CFLAGS@ @LIBAVUTIL_CFLAGS@ -Wno-deprecated-declarations
+AVSTREAM_LIBS = @LIBAVCODEC_LIBS@ @LIBAVFORMAT_LIBS@ @LIBAVUTIL_LIBS@ @LIBSWSCALE_LIBS@ @LIBSWRESAMPLE_LIBS@
+AVSTREAM_CFLAGS = @LIBAVFORMAT_CFLAGS@ @LIBAVCODEC_CFLAGS@ @LIBAVUTIL_CFLAGS@ @LIBSWSCALE_CFLAGS@ @LIBSWRESAMPLE_CFLAGS@ -Wno-deprecated-declarations
 
 libav_stream_la_CFLAGS = $(libav_cflags) $(shared_cflags) $(weed_cflags) $(AVSTREAM_CFLAGS)
 libav_stream_la_LDFLAGS = $(shared_ldflags) $(AVSTREAM_LIBS) $(libav_ldflags)
+endif
+endif
 
 endif
 endif
