@@ -17,7 +17,7 @@
 
 #define LIVES_PA_BUFF_MAXLEN 16384
 #define LIVES_PA_BUFF_TARGET 1024
-#define LIVES_PA_BUFF_FRAGSIZE 1024
+#define LIVES_PA_BUFF_FRAGSIZE 4096
 
 typedef struct {
   size_t size;
